--- a/src/main/resources/assets/goldencows/lang/en_us.json
+++ b/src/main/resources/assets/goldencows/lang/en_us.json
@@ -1,3 +1,6 @@
 {
+  "itemGroup.goldencows.main_tab": "GoldenCows",
+  "item.goldencows.golden_wheat": "Golden Wheat",
+  "item.goldencows.enchanted_golden_wheat": "Enchanted Golden Wheat",
   "entity.goldencows.apple_cow": "Apple Cow"
 }
